--- a/src/App.less
+++ b/src/App.less
@@ -6,9 +6,13 @@
 }
 
 .App-header {
+  position   : fixed;
+  left       : 0;
+  right      : 0;
   padding    : 0;
   text-align : center;
   line-height: 100%;
+  z-index    : 999;
 }
 
 .App-content {
