--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,34 +1,76 @@
-.cio {
-    font-size : 1.5rem;
-    position  : relative;
-    top       : 20vh;
-    left      : 0;
-    right     : 0;
-    text-align: center;
-    opacity   : 1;
-    transform : none;
+.home {
+  width    : 60%;
+  margin   : 0 auto;
+  font-size: 1rem;
+
+  h1 {
+    font-size: 2rem;
   }
-  
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  .animContainer {
+    // top       : 20vh;
+    // left      : 0;
+    // right     : 0;
+    width        : 100%;
+    height       : 100%;
+    min-height   : 40rem;
+    text-align   : center;
+    margin       : 5vh auto;
+  }
+
+  .cio {
+    // font-size: 1.5rem;
+    position    : relative;
+    top         : 15vh;
+    opacity     : 1;
+    transform   : none;
+    width       : 100%;
+  }
+
   .anim1 {
-    position  : relative;
-    top       : 10vh;
-    left      : 0;
-    right     : 0;
-    text-align: center;
-    opacity   : 1;
-    transform : none;
-  }
-  
-  .up {
-    z-index: 999;
-  }
-  
-  .clock {
-    // border: 1px solid red;
     position : relative;
-    top      : 30vh;
-    left     : 0;
-    right    : 0;
-    font-size: 3rem;
-    font-family: digitalFamliy;
+    top      : 10vh;
+    opacity  : 1;
+    transform: none;
+    width    : 100%;
   }
+
+  .up {
+    z-index: 100;
+  }
+
+  .clock {
+    font-size  : 3rem;
+    font-family: digitalFamliy;
+    margin     : 5vh auto;
+  }
+
+  .carouselContainer {
+    margin    : 10vh auto;
+    padding   : 5vh;
+    text-align: center;
+
+    .carousel {
+      background-color: transparent;
+      text-align      : center;
+      height          : 60vh;
+
+      div {
+        height: 100%;
+      }
+
+      img {
+        height: 100%;
+        margin: 0 auto;
+      }
+    }
+  }
+}
