--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -53,6 +53,12 @@
     margin     : 5vh auto;
   }
 
+  .aboutContainer {
+    margin    : 10vh auto;
+    padding   : 5vh;
+    text-align: center;
+  }
+
   .carouselContainer {
     margin    : 10vh auto;
     padding   : 5vh;
