1. add srcoll anim fo headerbar; 2. update About; 3. update Home;

--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -55,8 +55,16 @@
 
   .aboutContainer {
     margin    : 10vh auto;
-    padding   : 5vh;
+    padding   : 5vh 0;
     text-align: center;
+
+    .content_title{
+      text-align: left;
+    }
+
+    .about_content{
+      text-align: left;
+    }
   }
 
   .carouselContainer {
