--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -58,11 +58,32 @@
     padding   : 5vh 0;
     text-align: center;
 
-    .content_title{
+    .about-content-title {
       text-align: left;
     }
 
-    .about_content{
+    .about-content-text {
+      text-align    : left;
+      vertical-align: auto;
+      height        : 100%;
+    }
+
+    .about-icon-font {
+      font-size: 3rem;
+      margin   : .5rem;
+      opacity  : .67;
+    }
+
+    .about-icon-font:hover {
+      opacity: 1;
+    }
+
+    .info_icon {
+      // text-align: left;
+      background-color: red;
+    }
+
+    .info_text {
       text-align: left;
     }
   }
