--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -102,6 +102,10 @@
         flex-grow: 1;
       }
     }
+
+    .about_skill_area {
+      margin: 2rem 0;
+    }
   }
 
   .carouselContainer {
@@ -124,16 +128,4 @@
       }
     }
   }
-}
-
-.lazyIcon {
-  background: blue;
-  padding: auto;
-  width: 4rem;
-  height: 4rem;
-  opacity: 0.67;
-}
-
-.lazyIcon:hover {
-  opacity: 1;
 }
